--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,20 @@
 @import url("reset.css");
 
-header{
-  border-bottom: 15px pink solid;
-  background-color: pink;
-}
+
 body{
   background-image:url("https://media0.giphy.com/media/vJPrhjj5X0eyY/giphy.gif");
   background-size: 100%;
   background-repeat: no-repeat;
   background-color: pink;
 }
-button{
-background-color:pink;
-width:49%;
-margin-left: 10px;
-color: white;
-font-size: 25px;
-border-radius: 2em;
-text-decoration: none;
+
+header{
+  background-color: pink;
+  width: 1600px;
+}
+nav ul li {
+  display: inline-block;
+  width: 33%;
+  font-size: 25px;
+  background color: pink;
 }
